[package]
name = "alvr_audio"
version = "18.26.0"
authors = ["alvr-org", "Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
alvr_common = { path = "../common" }
alvr_session = { path = "../session" }
alvr_sockets = { path = "../sockets" }

parking_lot = "0.12"
serde = "1"
tokio = "1"

[target.'cfg(target_os = "linux")'.dependencies]
cpal = { version = "0.17", features = ["jack"] }
rodio = "0.22"
pipewire = "0.9"

[target.'cfg(not(any(target_os = "linux", target_os = "android")))'.dependencies]
cpal = "0.17"
rodio = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_Properties",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
] }
