[package]
name = "alvr_server"
version = "18.26.0"
authors = ["alvr-org", "polygraphene", "Valve Corporation"]
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []
bundled_ffmpeg = []
gpl = []

[dependencies]
alvr_audio = { path = "../audio" }
alvr_commands = { path = "../commands" }
alvr_common = { path = "../common" }
alvr_filesystem = { path = "../filesystem" }
alvr_session = { path = "../session" }
alvr_sockets = { path = "../sockets" }
settings-schema = { path = "../settings-schema", features = [
    "rename_camel_case",
] }

# Basic utilities
chrono = "0.4"
parking_lot = "0.12"
# Serialization
bincode = { version = "2", features = ["serde"] }
serde = "1"
serde_json = "1"
# Async
futures = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "net",
    "fs",
] }
# Networking
bytes = "1"
headers = "0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
reqwest = "0.13"
tokio-tungstenite = "0.29"
bytemuck = "1"
# Graphics
wgpu = "29"
winit = "0.30" # needed to get the screen size
# Browser interop
tempfile = "3"
alcro = { git = "https://github.com/korejan/alcro", branch = "dep-updates" }
webbrowser = "1" # this is just for opening links in the default browser
# Miscellaneous
fern = "0.7"

[build-dependencies]
alvr_filesystem = { path = "../filesystem" }
bindgen = "0.72"
cc = { version = "1", features = ["parallel"] }
walkdir = "2"

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3"
