[package]
name = "alvr_vulkan-layer"
version = "18.23.0"
authors = ["alvr-org", "ARM", "Patrick Nicolas <patricknicolas@laposte.net>"]
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
alvr_filesystem = { path = "../filesystem" }

[build-dependencies]
bindgen = "0.72"
cc = { version = "1", features = ["parallel"] }
pkg-config = "0.3.9"
walkdir = "2"
