[package]
name = "alvr_xtask"
version = "16.0.0"
authors = ["alvr-org", "Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
alvr_common = { path = "../common" }
alvr_filesystem = { path = "../filesystem" }

fs_extra = "1"
pico-args = "0.4"
walkdir = "2"
cargo_metadata = "0.14"
camino = "1.0"
regex = "1.5"
lazy_static = "1.4"
